--- a/css/custom.css
+++ b/css/custom.css
@@ -15,67 +15,70 @@ body {
     margin-top: 10%;
     margin-bottom: 10%;
 }
-.home {
-
-    min-width: 400px;
-    text-align: center;
-    position: relative;
-
-
-}
-.option {
-    width: 49.5%;
-    position: relative;
-    margin-bottom: 10px;
-    margin-top: 10px;
-
-
-
-
-}
 
 .form-control {
     width: 100%;
     position: relative;
-
-
-
-
 }
+
 .forms {
     width: 90%;
     min-width: 400px;
     margin-top: 50px;
     margin-bottom: 50px;
     position: relative;
+}
+
+.insere-xml {
+    padding-bottom: 20px;;
 
 }
+
 .progress { 
     margin-top: 10px;
 }
+
 .storeno-div {
     width:49.5% ;
     padding-right:1% ;
 }
 
+.cnpj-insere-xml-div {
+    width:49.5% ;
+    padding-right:1% ;
+}
+
+.store-xml-div {
+    padding-left: 0px;
+}
+
 .last-row {
     padding-top: 0.5%;
-
 }
-.submit-div {
 
+.submit-div {
     width: 100%;
     padding-left: 0px;
-    
-
-
 }
 
 .submit-btn {
     width: 100%;
-
 }
 
 .return-object {
     margin-top: 10px;
+}
+
+.input-group {
+    padding-bottom: 10px;
+
+}
+.store-xml-div {
+    padding-left: 0px;
+}
+.rigth-col {
+    padding-left: 5px;
+}
+.left-col {
+    padding-right: 5px;
 }
